--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 
 SECRET_KEY=8m2_6zwja&2#mbe1!ov9#i8)g5vpil66+^wt9ej%+)j92m*!y4
 DEBUG=True
-ALLOWED_HOSTS=127.0.0.1,localhost
+ALLOWED_HOSTS=127.0.0.1,localhost,.railway.app
 
 DB_NAME=railway
 DB_USER=postgres
 DB_PASSWORD=lCMmDkQFPRjIZQpYgdFxfDecZfdHJswS
-DB_HOST=postgres.railway.internal
-DB_PORT=5432
+DB_HOST=turntable.proxy.rlwy.net
+DB_PORT=29429
